v0.6/guides/http-layer/file-uploads.mdx
---
title: "File Uploads"
description: "Receive uploaded files via request helpers and persist them with the Storage facade."
icon: "upload"
---

File uploads flow through the same request payload as any other input. Uploaded files arrive as native `File`
objects, which you then read with `request.file()` and persist with the
[`Storage`](/v0.6/guides/storage/file-storage) facade.

## Receiving an upload

For a `multipart/form-data` request, `request.file()` returns the uploaded file alongside regular fields.
Use `request.hasFile()` to guard against a missing upload:

```ts app/controllers/UploadController.ts
import BaseController from "@bejibun/core/bases/BaseController";
import Storage from "@bejibun/storage";

export default class UploadController extends BaseController {
    public async store(request: Bejibun.Request): Promise<Response> {
        if (!request.hasFile("avatar")) {
            return super.response.setMessage("No file").setStatus(422).send();
        }

        const file = request.file("avatar")!;

        await Storage.disk("public").put(`avatars/${file.name}`, file);

        return super.response
            .setMessage("Uploaded")
            .setData({
                name: file.name,
                size: file.size
            })
            .send();
    }
}
```

## Storing files

The `Storage` facade (from the standalone `@bejibun/storage` package) writes to the disks configured in
`config/storage.ts` (a `local` and a `public` disk ship by default):

<CodeGroup>
    ```ts Default disk
    await Storage.put("uploads/report.pdf", content);
    ```

    ```ts Specific disk
    await Storage.disk("public").put("avatars/photo.png", content);
    ```

    ```ts Ad-hoc disk
    import App from "@bejibun/app";

    await Storage.build({
        driver: "local",
        root: App.Path.storagePath("custom")
    }).put("file.txt", content);
    ```

</CodeGroup>

The `public` disk is rooted at `storage/app/public` and exposes a public URL via `APP_URL/storage/public`.

## Validating uploads

Validate the rest of the form payload as usual before storing:

```ts
await request.validate(UploadValidator.store);

const file = request.file("avatar")!;
await Storage.disk("public").put(`avatars/${file.name}`, file);
```

<Tip>
    For cloud storage, configure the `s3` disk in `config/storage.ts` with your S3 credentials, then
    call `Storage.disk("s3").put(...)`. The local and S3 drivers share the same API.
</Tip>

<Warning>
    Never trust the client-supplied filename directly. Sanitize or generate your own name (and
    validate the content type / size) before writing to disk.
</Warning>
